--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-      <video src="al3a9l-zina.mp4" controls></video>
+      <video src="al3a9l-zina.mp4" poster="my_poster.jpg" controls></video>
   </body>
 </html>
